# ceng543_takeHome

./: .gitignore  README.md  pyproject.toml  requirements.txt
question1/: README.md  data_loader.py  main.py  model.py  text.py  train.py  train_bert_bilstm.py  utils.py  visualize_embeddings.py
question1/output/: results.json
question1/visualizations/: latent_visualization_metrics.json
question2/: README.md  main.py  train_eval.py  viz.py
question2/data/: spm_shared_unigram.model  spm_shared_unigram.vocab
question2/data/cleaned/: train.de  train.en  validation.de
question2/data/tokenized/: test.de.ids  test.en.ids  train.de.ids  train.en.ids  validation.de.ids  validation.en.ids
question2/models/: attentions.py  seq2seq.py
question2/output/: attention_comparison_results.json
question2/utils/: data_loader2.py  data_translation.py  dataset.py  preprocess.py  sentence_piece.py
question3/: README.md  ablation_study.py  evaluate.py  train.py  train_transformer.py
question3/models/: attentions.py  seq2seq.py  transformer.py
question3/output/: ablation_results.json  seq2seq_results.json  transformer_results.json
question3/utils/: embeddings.py
question4/: README.md  evaluate.py  flan_t5_rag.py  load_hotpotqa.py  sbert.py  tf_idf.py
question4/output/: rag_evaluation_results.json
question5/: README.md  failure_analysis.py  interpretability_analysis.py  main.py  model_analyzer.py  train_best_model.py  uncertainty_analysis.py
question5/models/: transformer_fixed.py
question5/output/json/: failure_analysis_results.json  uncertainty_results.json
