[project]
name = "ceng543-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==2.19.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "torchtext==0.18.0",
    "transformers>=4.57.1",
    "huggingface-hub>=0.34.0",
    "pandas>=1.3.0",
    "tqdm>=4.67.1",
    "preprocess>=2.0.0",
    "sentencepiece>=0.2.1",
    "matplotlib>=3.10.7",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "sacrebleu>=2.5.1",
    "sentence-transformers>=5.1.2",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
